--- a/src/main/resources/templates/articles/edit.html
+++ b/src/main/resources/templates/articles/edit.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <title>게시글 수정</title>
     <link rel="stylesheet" href="/css/styles.css">
-
+    <script th:if="${errorMessage != null}" th:inline="javascript">
+        window.onload = function() {
+            alert(/*[[${errorMessage}]]*/ '');
+        }
+    </script>
+    <script th:if="${!author}" th:inline="javascript">
+        window.onload = function() {
+            alert('게시글 작성자만 수정할 수 있습니다.');
+            window.location.href = '/articles/' + /*[[${article.id}]]*/ '';
+        }
+    </script>
 </head>
 <body>
 <div th:replace="~{header.html}"></div>
 
-<main>
+<main th:if="${author}">
     <h1>게시글 수정</h1>
     <div class="form-group">
         <label>작성자:</label>
@@ -31,11 +41,12 @@
         </div>
         <div class="form-actions">
             <button type="submit">수정하기</button>
+            <a th:href="@{/articles/{id}(id=${article.id})}">취소</a>
         </div>
     </form>
-    <a th:href="@{/articles/{id}(id=${article.id})}" class="cancel-btn">취소</a>
-    <a href="/" class="home-link">홈으로</a>
+    <a href="/">홈으로</a>
 </main>
+
 <div th:replace="~{footer.html}"></div>
 </body>
 </html> 
