--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.html">Posts</a></li>
                 <li><a href="user/login.html" role="button">로그인</a></li>
-                <li><a href="user/form.html" role="button">회원가입</a></li>
+                <li><a th:href="@{/users/form}" role="button">회원가입</a></li>
                 <!--
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
@@ -87,7 +87,7 @@
                     <div class="wrap">
                         <div class="main">
                             <strong class="subject">
-                                <a href="#" th:text="${article.title}">제목</a>
+                                <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}">제목</a>
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
