--- a/src/main/resources/templates/partials/nav.html
+++ b/src/main/resources/templates/partials/nav.html
@@ -1,12 +1,10 @@
 <nav class="navbar navbar-fixed-top header">
     <div class="col-md-12">
         <div class="navbar-header">
-
             <a href="/" class="navbar-brand">SLiPP</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
                 <i class="glyphicon glyphicon-search"></i>
             </button>
-
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse1">
             <form class="navbar-form pull-left">
@@ -18,6 +16,13 @@
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    {{#loginUser}}
+                    <span class="navbar-text">
+                        안녕하세요! {{loginUser.userId}}님
+                    </span>
+                    {{/loginUser}}
+                </li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
                     <ul class="dropdown-menu">
