--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -14,10 +14,6 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            <!-- 성공 메시지 표시 -->
-            <div th:if="${message}" class="alert alert-success" role="alert" th:text="${message}">
-                회원정보가 성공적으로 수정되었습니다.
-            </div>
 
             <!-- 에러 메시지 표시 -->
             <div th:if="${errorMessage}" class="alert alert-danger" role="alert" th:text="${errorMessage}">
@@ -26,7 +22,7 @@
 
             <form name="question" method="post" th:action="@{/users/{seq}(seq=${user.seq})}">
                 <!-- PUT 메소드 지정을 위한 hidden input -->
-                <input type="hidden" name="_method" value="PUT" />
+                <input type="hidden" name="_method" value="put" />
 
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
