--- a/src/main/resources/templates/partials/subnav.html
+++ b/src/main/resources/templates/partials/subnav.html
@@ -18,14 +18,20 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/">Posts</a></li>
-                <li><a href="/user/login" role="button">로그인</a></li>
-                <li><a href="/user/form" role="button">회원가입</a></li>
+                {{#loginUser}}
+                <form id="logoutForm" method="post" action="/user/logout" style="display: none;"></form>
+                <li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">로그아웃</a></li>
+                <li><a href="/users/{{userId}}/form" role="button">개인정보수정</a></li>
+                {{/loginUser}}
+
                 <!--
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
                 -->
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                {{^loginUser}}
+                <li><a href="/user/form" role="button">회원가입</a></li>
+                <li><a href="/user/login" role="button">로그인</a></li>
+                {{/loginUser}}
             </ul>
         </div>
     </div>
