--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -26,7 +26,7 @@
                       </div>
                   </div>
                   <div class="article-doc">
-                      <p>{{{article.content}}}</p>
+                      <p>{{{parsedContent}}}</p>
                   </div>
                   <div class="article-util">
                       <ul class="article-util-list">
