--- a/src/main/resources/templates/qna/update-form.html
+++ b/src/main/resources/templates/qna/update-form.html
@@ -18,7 +18,7 @@
                     <label for="content">내용</label>
                     <textarea name="content" id="content" rows="5" class="form-control">{{{parsedContent}}}</textarea>
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+                <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix" />
             </form>
         </div>
