--- a/src/main/resources/templates/qna/update-form.html
+++ b/src/main/resources/templates/qna/update-form.html
@@ -9,14 +9,15 @@
     {{> partials/error}}
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/articles/{index}/update">
+            <form name="question" method="post" action="/articles/{{article.id}}/update">
+                <input type="hidden" name="_method" value="PUT">
                 <div class="form-group">
                     <label for="title">제목</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="제목" value="{{article.title}}"/>
                 </div>
                 <div class="form-group">
                     <label for="content">내용</label>
-                    <textarea name="content" id="content" rows="5" class="form-control">{{{parsedContent}}}</textarea>
+                    <textarea name="content" id="content" rows="5" class="form-control">{{article.content}}</textarea>
                 </div>
                 <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix" />
