--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -18,10 +18,10 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/users">
+          <form name="question" method="post" action="/users/signup">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="id" placeholder="User ID">
+                  <label for="userid"></label><input class="form-control" id="userid" name="userid" placeholder="User ID">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
