--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -16,9 +16,15 @@
                     <div class="card-body p-4">
                         <form method="post" action="/users">
                             <div class="mb-4">
-                                <label for="userId" class="form-label fw-bold">아이디</label>
-                                <input type="text" class="form-control form-control-lg" id="userId" name="userId" placeholder="아이디를 입력하세요">
+                                <label for="loginId" class="form-label fw-bold">아이디</label>
+                                <input type="text" class="form-control form-control-lg" id="loginId" name="loginId" placeholder="아이디를 입력하세요">
                             </div>
+                            <th:block th:unless="${message == null}">
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    [[ ${message} ]]
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            </th:block>
 
                             <div class="mb-4">
                                 <label for="name" class="form-label fw-bold">닉네임</label>
