--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -76,7 +76,12 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/users/login">
+          <form name="question" method="post" action="/users/login" th:object="${loginForm}">
+              <!-- 🔹 글로벌 에러 메시지 출력 -->
+              <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
+                  <p th:each="error : ${#fields.globalErrors()}" th:text="${error}"></p>
+              </div>
+
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input class="form-control" id="userId" name="userId" placeholder="User ID">
