--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       </div>
       <div class="d-flex">
-        <a class="btn btn-primary" th:href="@{/users/login}">로그인</a>
+        <a class="btn btn-primary" th:href="@{/users/loginForm}">로그인</a>
         <a class="btn" th:href="@{/users/form}">회원가입</a>
         <a class="btn" th:href="@{/article/write}">글 작성</a>
       </div>
