--- a/src/main/resources/templates/article/index.html
+++ b/src/main/resources/templates/article/index.html
@@ -69,11 +69,18 @@
                 <li th:if="${session.loginUser == null}"><a href="user/form.html">회원가입</a></li>
 
                 <!-- 🔹 로그인 상태일 때 -->
-                <li th:if="${session.loginUser != null}"><a href="/users/logout">로그아웃</a></li>
-                <li th:if="${session.loginUser != null}"><a href="/users/profile">개인정보수정</a></li>
+<!--                <li th:if="${session.loginUser != null}"><a href="/users/logout">로그아웃</a></li>-->
+                <li th:if="${session.loginUser != null}">
+                    <form th:action="@{/users/logout}" method="post">
+                        <button type="submit" class="btn btn-link">로그아웃</button>
+                    </form>
+                </li>
+                <li th:if="${session.loginUser != null}"><a th:href="@{'/users/' + ${session.loginUser.id} + '/form'}">개인정보수정</a></li>
                 <li th:if="${session.loginUser != null}">
                     <span>환영합니다, <b th:text="${session.loginUser.userId}"></b> 님!</span>
                 </li>
+
+
 
             </ul>
         </div>
